api/infra_overlay/virtual-service.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: project-prediction
spec:
  hosts:
    - twang0.mids255.com
  gateways:
    - istio-ingress/twang0-gateway
  http:
    - match:
        - uri:
            exact: /
        - uri:
            exact: /api
        - uri:
            exact: /submit_question
        - uri:
            prefix: /health
        - uri:
            prefix: /docs
        - uri:
            prefix: /openapi.json
      route:
        - destination:
            host: project-prediction
            port:
              number: 8000
